and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *

     ----------------------------------------------------------

24 October 14: V.Ivanchenko (emstand-V10-00-47)
- G4DeltaAngle - comment out warning happens frequently for 
    low-enegry electrons

24 October 14: V.Ivanchenko (emstand-V10-00-46)
- G4CoulombScattering - use G4EmParameters
- G4WentzelVIModel - refinment of lateral displacement
- G4UrbanMscModel - refinment of lateral displacement 
- G4WentzelOKandVIxSection - fixed sampling in single scattering

16 October 14: V.Ivanchenko (emstand-V10-00-45)
- G4eIonisation, G4hIonisation, G4ionIonisation, G4eBremsstrahlung,
  G4GammaConversion, G4ComptonScattering, G4PhotoElectricEffect
    - use G4EmParameterisation at initialisation

14 October 14: V.Ivanchenko (emstand-V10-00-44)
- G4PEEffectFluoModel - fixed threshold cross section
- G4GammaConversion - minor fix of initialisation

07 October 14: L.Urban
- G4UrbanMscModel corrs to speed up (if --> min,max,
  random numbers using rndmEngineMod pointer) 

06 October 14: L. Urban (emstand-V10-00-43)
- G4UrbanMscModel - added new step limit type UseSafetyPlus 

8 September 14: V.Ivanchenko (emstand-V10-00-42)
- G4PairProductionRelModel, G4eBremsstrahlungRelModel - added 
    protection at initialisation for the case when user artifitially
    reducing high energy limit of the model (bug #1670)

5 September 14: V.Ivanchenko (emstand-V10-00-41)
- G4PAIxSection - fixed memory leak reported by Coverity

12 August 14: V.Ivanchenko (emstand-V10-00-40)
- G4WentzelVIModel - fixed bug in single scattering mode (recently 
    introduced)

08 August 14: V.Ivanchenko (emstand-V10-00-39)
- G4PAIModel - updated sampling of delta electron energy
- G4PAIModelData - proper deletion of physics vectors end of run,